--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Chess app using React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --content-base public --port 3030"
   },
   "author": "John Brennan <john@jhnbrnn.com> (http://jhnbrnn.com)",
   "license": "MIT",
   "dependencies": {
+    "bourbon": "^4.2.6",
+    "bourbon-neat": "^1.7.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   },
@@ -17,6 +19,10 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.2.0",
+    "node-neat": "^1.7.2",
+    "node-sass": "^3.4.2",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
