--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Chess app using React",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --content-base public --port 3030"
+    "start": "webpack-dev-server --hot --content-base public --port 3030"
   },
   "author": "John Brennan <john@jhnbrnn.com> (http://jhnbrnn.com)",
   "license": "MIT",
   "dependencies": {
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.2",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "chess.js": "^0.10.2",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
